--- a/client/index.html
+++ b/client/index.html
@@ -9,5 +9,12 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      (function(h,b,s,n,i,p,e,t) {
+        h._HB_ = h._HB_ || {};h._HB_.pid = i;;;;
+        t=b.createElement(s);t.type="text/javascript";t.async=!0;t.src=n;
+        e=b.getElementsByTagName(s)[0];e.parentNode.insertBefore(t,e);
+    })(window,document,"script","https://widget.honeybook.com/assets_users_production/websiteplacements/placement-controller.min.js","5dddbfda8de4fa001aa23bf8");
+    </script>
   </body>
 </html>
